# vidapath

./: REFACTORING_GUIDE.md  checkstyle.xml  compose.override.yaml  compose.yaml  flake.nix  modernization_plan.md  modernization_progress.md  modernization_summary.md
.github/workflows/: app-engine.yaml  cbir.yaml  core.yaml  docker.yaml  docs.yaml  helm-main.yaml  helm-test.yaml  ims.yaml  main.yaml  python-client.yaml  sam.yaml  web-ui.yaml
app-engine/: Dockerfile  build.gradle
app-engine/src/main/resources/: application.yml
app-engine/src/test/resources/: application.yml
cbir/: Dockerfile
clients/python/: pyproject.toml
clients/python/cytomine/: cytomine.py
clients/python/examples/: import_datasets.py
core/: Dockerfile
core/src/main/resources/: application.yml  messages.properties
core/src/test/resources/: application.yml
docker/: compose.dev.core.yaml  compose.dev.ims.yaml  compose.dev.sam.yaml  compose.dev.ui.yaml  compose.pims-production.yaml
docs/: package-lock.json
docs/src/.vuepress/site-config/: content.json
docs/src/admin-guide/ce/: configuration.md
docs/src/user-guide/: getting-started.md
helm/: README.md  compose.yaml
helm/charts/cytomine/: Chart.yaml  values.yaml
helm/charts/cytomine/ci/: test-values.yaml
helm/charts/cytomine/example/: values.yaml
helm/charts/cytomine/local/: values.yaml
helm/charts/cytomine/templates/: NOTES.txt  _helpers.tpl  ingress.yaml  serviceaccount.yaml
helm/example/: values.yaml
iam/: Dockerfile  kc_config.json
k3s/: cytomine-local-ns.yaml  entrypoint.sh  nginx-ingress.yaml
nginx/: Dockerfile
pims/: Dockerfile  pims-config.env  pyproject.toml
pims/docker/: gunicorn_conf.py
pims/pims/: application.py  config.py
pims/pims/api/: operations.py
pims/pims/api/utils/: cytomine_auth.py
pims/pims/importer/: annotation.py  dataset.py  image.py  importer.py  metadata.py  ontology.py  scanner.py  utils.py
pims/pims/processing/histograms/: utils.py
pims/pims/schemas/: annotation.py  operations.py
pims/tests/importer/: test_scanner.py
postgis/: Dockerfile
sam/: Dockerfile  pyproject.toml
sam/app/: config.py  download_weights.py  main.py
sam/app/annotations/: segmentation.py
sam/app/api/: annotation.py
sam/app/utils/: align_prompts.py  annotations.py
web-ui/: .eslintrc.js  Dockerfile  README.md  jest.config.js  package-lock.json  package.json  pnpm-lock.yaml
web-ui/api-client/: package.json
web-ui/api-client/src/models/: image-instance.js  slice-instance.js
web-ui/public/: index.html
web-ui/src/: App.vue  keycloak.js  main.js  routes.js  viewer-webcomponent.js
web-ui/src/api/: cytomine.js  index.js
web-ui/src/api/collections/: annotation-collection.js
web-ui/src/api/models/: abstract-image.js  ai-algorithm-job.js  airunner.js  annotation-comment.js  (+3 more)
web-ui/src/components/: GlobalDashboard.vue
web-ui/src/locales/: translations.csv
web-ui/src/store/: store.js
web-ui/src/utils/: annotation-utils.js  app.js  ontology-utils.js  style-utils.js  token-utils.js
web-ui/tests/: utils.js
web-ui/ui/: package.json  pnpm-lock.yaml
web-ui/ui-v3/: package.json  pnpm-lock.yaml
web-ui/ui/public/: index.html
web-ui/ui/scripts/: configuration.json
web-ui/ui/src/: App.vue  keycloak.js  main.js  routes.js  simple-viewer-webcomponent.js
(+438 files in other folders)
