[project]
name = "cytomine-pims"
version = "1.4.0"
description = "Cytomine Python Image Server"
authors = [{ name = "Ulysse Rubens", email = "uliege@cytomine.org" }]
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
  "aiofiles==23.1.0",
  "celery==5.2.7",
  "cytomine-python-client",
  "fastapi==0.110.3",
  "fastapi-utils==0.7.0",
  "geojson>=3.2.0",
  "gunicorn==22.0.0",
  "importlib-metadata==6.0.0",
  "lxml==6.0.2",
  "matplotlib==3.7.1",
  "numpy==1.24.4",
  "orjson==3.10.3",
  "pathvalidate==2.5.2",
  "pillow==10.3.0",
  "pint==0.20.1",
  "pydantic==2.7.3",
  "pydantic-extra-types==2.8.0",
  "pydantic-settings==2.3.1",
  "pydicom==3.0.1",
  "pylibjpeg>=2.1.0",
  "python-dateutil==2.9.0.post0",
  "python-multipart==0.0.18",
  "pyvips==2.2.3",
  "pyyaml==6.0.3",
  "rasterio==1.3.6",
  "redis[hiredis]==5.0.1",
  "scikit-image==0.20.0",
  "shapely==2.0.1",
  "tifffile==2023.2.28",
  "typing-inspect==0.9.0",
  "uvicorn[standard]==0.29.0",
  "zarr==2.14.2",
]

[dependency-groups]
dev = [
  "httpx>=0.28.1",
  "mypy>=1.18.2",
  "pytest>=8.4.2",
  "ruff>=0.13.2",
]

[tool.ruff.lint]
select = ["FAST001", "FAST003"]
ignore = ["E402"]

[tool.uv.sources]
cytomine-python-client = { path = "../clients/python" }
