[project]
name = "sam"
version = "0.1.0"
description = "Segment Anything Models"
readme = "README.md"
authors = [
  { name = "Cytomine ULiège", email = "uliege@cytomine.org" },
]
requires-python = ">=3.10"
dependencies = [
  "fastapi[standard]>=0.116.1",
  "geojson>=3.2.0",
  "numpy>=2.1.2",
  "opencv-python-headless>=4.11.0.86",
  "pillow>=11.0.0",
  "pydantic>=2.10.6",
  "pydantic-settings>=2.8.1",
  "sam2>=1.1.0",
  "shapely>=2.1.1",
  "torch==2.8.0",
  "torchvision==0.23.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28.1",
  "mypy>=1.17.1",
  "pytest>=8.4.1",
  "ruff>=0.12.10",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]

[tool.mypy]
ignore_missing_imports = true

[tool.setuptools.packages]
find = { include = ["app"] }
